--- a/projects/templates/project_fields.html
+++ b/projects/templates/project_fields.html
@@ -39,7 +39,7 @@
 </div>
 
 <div class="controls">
-    <button id="loc_button" class="btn" type="button" onclick="getMyLocation()">Get my location</button>
+    <button id="loc_button" class="btn btn-small" type="button" onclick="getMyLocation()">Get my location</button>
 </div>
 
 <div class="control-group">
@@ -130,5 +130,6 @@
     for="" class="control-label">Description:</label>
     <div class="controls">
         {{ form.description }}
+        <div id="remainingC">1000 / 1000</div>
     </div>
 </div>
