--- a/globalstatic/css/styles.css
+++ b/globalstatic/css/styles.css
@@ -6,6 +6,18 @@ body {
   display: none;
 }
 
+.main-forms {
+	margin-top: 20px;
+}
+
+.main-forms {
+	margin-top: 20px;
+}
+
+.main-content {
+	margin-top: 20px;
+}
+
 #box-hide {
 	position: absolute;
 	background-color: white;
@@ -32,6 +44,8 @@ body {
   	margin-bottom: 10px;
   	background-color: #FFFFFF;
   	z-index: 4;
+  	padding-bottom: 20px;
+  	box-sizing: border-box;
 }
 
 #my-wrapper, #my-wrapper > #body-wrapper {
@@ -102,4 +116,9 @@ body {
     bottom: 0;
     max-width: 100%;
     max-height: 100%;
+}
+
+.no-image-wrapper {
+	/*position: absolute;*/
+	/*margin: 0 auto;*/
 }
