--- a/projects/templates/change_project_details.html
+++ b/projects/templates/change_project_details.html
@@ -3,51 +3,78 @@
 
 {% block extrahead_level3 %}
 	<link href="{% static "users/css/forms.css" %}"                     rel="stylesheet">
+	<link href="{% static "users/css/dev_table.css" %}"                     rel="stylesheet">
+
 {% endblock extrahead_level3 %}
 
 {% block sidebar_content %}
-	list other projects
 {% endblock sidebar_content %}
 
 {% block main_extra_content %}
-<form id="project-form" class="form-horizontal" method="post" action="" enctype="multipart/form-data"> 
-	{% csrf_token %}
-	<fieldset>
-		{% if form.errors %}
-		<div class="controls">
-			<div class="errors main-errors">Please correct the following fields</div>
-		</div>
-		{% endif %}
-		{% for field in form %}
-		<li>{{ field.errors|striptags }}</li>
-		{% endfor %}
-		{% include 'project_fields.html' %}
-		<div class="control-group">
-			{% if form.status.errors %}
-			<div class="errors controls"> 
-				{{ form.status.errors }} 
-			</div> 
-			{% endif %}
-			<label {% if form.status.errors %} class="control-label errors" {% else %} class="control-label" {% endif %}
-			for="" class="control-label"><span class="mandatory">* </span>Status:</label>
+<div class="span6 main-content">
+	<form id="project-form" class="form-horizontal" method="post" action="" enctype="multipart/form-data"> 
+		{% csrf_token %}
+		<fieldset>
+			{% if form.errors %}
 			<div class="controls">
-				{{ form.status }}
+				<div class="errors main-errors">Please correct the following fields</div>
 			</div>
-		</div>
-		<div class="controls">
-			<input type='button' id='submit-button' class="btn btn-success" value="Save Changes"
-			{% if user.get_profile.user_type != 'Charity'%}
-			rel="popover" title="You must log in as a Charity to upload a project" disabled
 			{% endif %}
-			>
-		</div>
-		{# <input type='submit' value="Hidden Submit" style="display: none;"> #}
-	</fieldset> 
-</form>
+			{% for field in form %}
+			<li>{{ field.errors|striptags }}</li>
+			{% endfor %}
+			{% include 'project_fields.html' %}
+			<div class="control-group">
+				<label class="control-label"for="">Developers:</label>
+				<div class="controls">
+					{% if developers %}
+						<table id="developers-project-change">
+							{% for developer in developers %}
+								<tr id="developer-{{ developer.id }}">
+									<td class="dev-name">
+										<a href="{% url 'developer-details' pk=developer.id %}">{{ developer }}</a>
+									</td>
+									<td class="dev-remove-button">
+										<button type="button" class="btn btn-small" onclick="removeDeveloper('{% url 'remove-developer' dev_id=developer.id proj_id=project_id %}')">
+										Remove</button>
+									</td>
+								</tr>
+							{% endfor %}
+						</table>
+					{% else %}
+						No Developers have signed up yet.
+					{% endif %}
+				</div>
+			</div>
+			<div class="control-group">
+				{% if form.status.errors %}
+				<div class="errors controls"> 
+					{{ form.status.errors }} 
+				</div> 
+				{% endif %}
+				<label {% if form.status.errors %} class="control-label errors" {% else %} class="control-label" {% endif %}
+				for="" class="control-label"><span class="mandatory">* </span>Status:</label>
+				<div class="controls">
+					{{ form.status }}
+				</div>
+			</div>
+			<div class="controls">
+				<input type='button' id='submit-button' class="btn btn-success" value="Save Changes"
+				{% if user.get_profile.user_type != 'Charity'%}
+				rel="popover" title="You must log in as a Charity to upload a project" disabled
+				{% endif %}
+				>
+			</div>
+			{# <input type='submit' value="Hidden Submit" style="display: none;"> #}
+		</fieldset> 
+	</form>
+</div>
 <p class="hidden" id="p_country">{{ user.get_profile.country }}</p>
 <p class="hidden" id="p_state">{{ user.get_profile.state }}</p>
 <p class="hidden" id="p_city">{{ user.get_profile.city }}</p>
 {# <div id='charity-data-url' rel="{% url 'charity-data' %}"></div> #}
 <script src="{% static "users/js/text_to_dark.js" %}"></script>
 <script src="{% static "projects/js/volunteers.js" %}"></script> 
+<script src="{% static "projects/js/remove_developer.js" %}"></script> 
+
 {% endblock main_extra_content %}
