--- a/templates/base_head.html
+++ b/templates/base_head.html
@@ -17,6 +17,7 @@
 <script src="{% static "global/js/jquery-1.10.2.min.js" %}" 		type="text/javascript"></script>
 <script src="{% static "global/bootstrap/js/bootstrap.min.js" %}"	type="text/javascript"></script>
 
+<script src="{% static "global/js/search_format.js" %}"></script>
 {# <link href="{% static "global/bootstrap/css/bootstrap-fileupload.min.css" %}"   rel="stylesheet" /> #}
 {# <script src="{% static "bootstrap-fileupload.min.js" %}"></script> #}
 <!-- <link href="{% static "global/assets/bootstrap/css/bootstrap-responsive.css" %}" rel="stylesheet"> -->
