--- a/users/templates/accounts_sidebar.html
+++ b/users/templates/accounts_sidebar.html
@@ -2,4 +2,4 @@
     <a href="{% url 'password-change' %}" class="btn btn-primary link-button-accounts">Change Password</a><br>
     <a href="{% url 'my-projects' pk=user.id %}" class="btn btn-primary link-button-accounts">My Projects</a><br>
     <a href="{% url 'my-requests' pk=user.id %}" class="btn btn-primary link-button-accounts">My Requests</a><br>
-    <a href="{% url 'my-notifications' pk=user.id %}" class="btn btn-primary link-button-accounts">My notifications</a>
+    <a href="{% url 'my-notifications' pk=user.id %}" class="btn btn-primary link-button-accounts">My Notifications</a>
