--- a/users/templates/charity_details.html
+++ b/users/templates/charity_details.html
@@ -17,7 +17,7 @@
 	                    {{ charity.company_name }}
 	                </p>
 	                <p>
-	                	www: <a href="{{ charity.www }}">{{ charity.www }}</a>
+	                	www: <a href="//{{ charity.www }}">{{ charity.www }}</a>
 	                </p>
 	                <p>
 		                Email: <a href="mailto:{{ charity.user.email }}">
