--- a/globalstatic/css/front_page.css
+++ b/globalstatic/css/front_page.css
@@ -10,7 +10,7 @@
 	position: relative;
 	width: 100%;
 	height: 300px;
-	background-color: #E6E6E6;
+	background-color: #FFFFFF;
 }
 
 .front-page-header {
@@ -23,7 +23,7 @@
 	position: relative;
 	width: 265px;
 	height: 180px;
-	background-color: #E6E6E6;
+	background-color: #FFFFFF;
 }
 
 .story {
