--- a/users/templates/base_accounts.html
+++ b/users/templates/base_accounts.html
@@ -26,4 +26,5 @@
 <script src="{% static "users/js/userfx.js" %}"></script>  
 <script src="{% static "users/js/text_to_dark.js" %}"></script>  
 <script src="{% static "users/js/coordinates.js" %}"></script>            
+<script src="{% static "projects/js/delete.js" %}"></script>  
 {% endblock extrascripts %}
