--- a/projects/templates/base_my_projects.html
+++ b/projects/templates/base_my_projects.html
@@ -2,8 +2,9 @@
 {% load staticfiles %}
 
 {% block accounts_content %}
+    {% csrf_token %}
     {% for project in projects %}
-        <div class="search-wrapper">
+        <div class="search-wrapper" id="project-{{ project.id }}">
         <p>Title: 
           {% block title %}
           {% endblock title %}
@@ -29,6 +30,9 @@
         {% endif %}
         <p>Description: {{ project.description | truncatewords:"20" }}...</p> 
         </p>
+        {% if user.get_profile.user_type == 'Charity' %}
+          <button class="btn btn-primary" onclick="deleteContent('{% url 'delete-project' pk=project.id %}')">Delete</button>          
+        {% endif %}
         </div>
     {% endfor %}
 {% endblock accounts_content %}
