--- a/projects/templates/requests_charity_content.html
+++ b/projects/templates/requests_charity_content.html
@@ -62,6 +62,11 @@
               </button> 
             </td>
           </tr>
+          <tr id="request-{{ my_request.id }}">
+            <td colspan="2" class="delete-button">
+              <button class="btn btn-primary" onclick="deleteContent('{% url 'delete-request' pk=my_request.id %}')">Delete</button>          
+            </td>
+          </tr>
         </table>
       </div>
 {% endfor %}
