--- a/projects/templates/project_fields.html
+++ b/projects/templates/project_fields.html
@@ -78,6 +78,7 @@
     for="" class="control-label"><span class="mandatory">*</span> City:</label>
     <div class="controls">
         {{ form.city }}
+        <div class="mapquest-form">Geocoding Powered by: <a href="//www.mapquest.com">MapQuest</a></div>
     </div>
 </div>
 
