--- a/projects/templates/search_form_fields.html
+++ b/projects/templates/search_form_fields.html
@@ -50,6 +50,15 @@
       <div class="search" id="filter-wrapper">
         <button class="btn btn-primary btn-small" type="button" id="submit-button">Filter Results</button>
       </div>
+
+      <div class="mapquest-wrapper">
+        Geocoding powered by:
+        <a href="//www.mapquest.com">
+          <div class="mapquest-image-wrapper">
+            <img src="{% static 'global/images/mapquest.png' %}" alt="" />
+          </div>
+        </a>
+      </div>
   <script src="{% static 'global/js/search_help.js' %}"></script>
   </form> <!-- project-search-form -->
 
