--- a/projects/templates/requests_charity_content.html
+++ b/projects/templates/requests_charity_content.html
@@ -3,7 +3,7 @@
 {% endif %}
 
 {% for my_request in requests %}
-      <div class="search-wrapper">
+      <div class="search-wrapper" id="request-{{ my_request.id }}">
         <table class="search-table">
           <tr class="search-top-wrapper" id="top-{{ forloop.counter0 }}">
             <td class="search-text-wrapper">
@@ -62,7 +62,7 @@
               </button> 
             </td>
           </tr>
-          <tr id="request-{{ my_request.id }}">
+          <tr>
             <td colspan="2" class="delete-button">
               <button class="btn btn-primary" onclick="deleteContent('{% url 'delete-request' pk=my_request.id %}')">Delete</button>          
             </td>
