--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -1,8 +1,20 @@
 {% extends 'base_info.html' %}
 
 {% block info_content %}
-<form action="">
-	<textarea name="" id="" cols="30" rows="10"></textarea>
+<form action="" method="POST">
+	{% csrf_token %}
+	{% if form.sender.errors %}
+		{{ form.sender.errors }}
+	{% endif %}
+	{{ form.sender }}<br>
+	{% if form.subject.errors %}
+		{{ form.subject.errors }}
+	{% endif %}
+	{{ form.subject }}<br>
+	{% if form.message.errors %}
+		{{ form.message.errors }}
+	{% endif %}
+	{{ form.message }}<br>	
 	<input type="submit" class="btn btn-primary" value="Send">
 </form>
 
