--- a/templates/fbtest.html
+++ b/templates/fbtest.html
@@ -10,7 +10,7 @@ div { padding: 10px; }
 <div id="fb-root"></div>
 <script type="text/javascript">
   // You probably don't want to use globals, but this is just example code
-  var fbAppId = '609532269066908';
+  var fbAppId = {{ fb_app_id }};
   var objectToLike = 'http://techcrunch.com/2013/02/06/facebook-launches-developers-live-video-channel-to-keep-its-developer-ecosystem-up-to-date/';
 
   // This check is just here to make sure you set your app ID. You don't
