--- a/templates/fbtest.html
+++ b/templates/fbtest.html
@@ -69,8 +69,9 @@ div { padding: 10px; }
     FB.api(
        'https://graph.facebook.com/me/og.likes',
        'post',
-       { object: objectToLike,
-         privacy: {'value': 'SELF'} },
+       { object: objectToLike
+         // ,privacy: {'value': 'SELF'}
+          },
        function(response) {
          if (!response) {
            alert('Error occurred.');
