--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,8 +9,15 @@
             </div>
             <div class="span3 offset3" id="fb-buttons">
                 <a href="{% url 'fbtest' %}">Fb test</a>
-                <button class="btn btn-primary">FB Like</button>
-                <button class="btn btn-primary">FB Share</button>
+                <div
+                  class="fb-login-button"
+                  data-show-faces="false"
+                  data-width="200"
+                  data-max-rows="1"
+                  data-scope="publish_actions">
+                </div>
+                <button class="my-fb-like" onclick="postLike('http://lboglocal.com{% url 'home' %}')"></button>
+                {# <button class="btn btn-primary">FB Share</button> #}
             </div>
             <div class="span3" id="reg-login">
                 {% if user.is_authenticated %}
