--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
                 <a href="{% url 'fbtest' %}">Fb test</a>
                 <div
                   class="fb-login-button"
-                  data-show-faces="false"
+                  data-show-faces="true"
                   data-width="200"
                   data-max-rows="1"
                   data-scope="publish_actions">
