--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,7 +16,7 @@
                   data-max-rows="1"
                   data-scope="publish_actions">
                 </div>
-                <button class="my-fb-like" onclick="postLike('http://lboglocal.com{% url 'home' %}')"></button>
+                <button class="my-fb-like" onclick="postLike('http://{{ SITE_ROOT }}{% url 'home' %}')"></button>
                 {# <button class="btn btn-primary">FB Share</button> #}
             </div>
             <div class="span3" id="reg-login">
