--- a/templates/fbscript.html
+++ b/templates/fbscript.html
@@ -55,7 +55,7 @@
 
   
   function postLike(objectToLike) {
-    alert(objectToLike);
+    // alert(objectToLike);
     FB.api(
        'https://graph.facebook.com/me/og.likes',
        'post',
@@ -78,24 +78,42 @@
   }
 
   function postShare(objectToShare) {
-    FB.api(
-       'https://graph.facebook.com/me/og.follows',
-       'post',
-       { profile: objectToShare
-         // ,privacy: {'value': 'SELF'}
-          },
-       function(response) {
-         if (!response) {
-           alert('Error occurred.');
-         } else if (response.error) {
-           alert('Error: ' + response.error.message);
-         } else {
+      var image_address = $('#site-address').attr('rel');
+      FB.ui({
+        method: 'feed',
+        link: $('#site-address').attr('rel'),
+        picture: image_address,
+        name: 'Little Bits of Good',
+        caption: 'Charity Website',
+        description: 'A platform for connecting charities in need of IT solutions with developers willing to volunteer.'
+      }, function(response){});
+    // works
+    // FB.api('/me/feed', 'post', { message: 'Check out '+objectToShare}, function(response) {
+    //   if (!response || response.error) {
+    //     alert('Couldn\'t Publish Data');
+    //   } else {
+    //     alert("Message successfully posted to your wall");
+    //   }
+    // });
 
-           // document.getElementById('result').innerHTML =
-           //   '<a href=\"https://www.facebook.com/me/activity/' + response.id + '\">' +
-           //   'Story created.  ID is ' + response.id + '</a>';
-         }
-       }
-    );
+    // FB.api(
+    //    'https://graph.facebook.com/me/og.follows',
+    //    'post',
+    //    { profile: objectToShare
+    //      // ,privacy: {'value': 'SELF'}
+    //       },
+    //    function(response) {
+    //      if (!response) {
+    //        alert('Error occurred.');
+    //      } else if (response.error) {
+    //        alert('Error: ' + response.error.message);
+    //      } else {
+
+    //        // document.getElementById('result').innerHTML =
+    //        //   '<a href=\"https://www.facebook.com/me/activity/' + response.id + '\">' +
+    //        //   'Story created.  ID is ' + response.id + '</a>';
+    //      }
+    //    }
+    // );
   }
 </script>
