--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,6 +9,10 @@
             </div>
             <div class="span3 offset3" id="fb-buttons">
                 <a href="{% url 'fbtest' %}">Fb test</a>
+                <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();">
+</fb:login-button>
+                {% comment %}
+                    
                 <div
                   class="fb-login-button"
                   data-show-faces="true"
@@ -16,6 +20,7 @@
                   data-max-rows="1"
                   data-scope="publish_actions">
                 </div>
+                {% endcomment %}
                 <button class="my-fb-like" onclick="postLike('http://{{ SITE_ROOT }}{% url 'home' %}')"></button>
                 <button class="my-fb-share" onclick="postShare('http://{{ SITE_ROOT }}{% url 'home' %}')">Share</button>
                 {# <button class="btn btn-primary">FB Share</button> #}
