--- a/globalstatic/css/styles.css
+++ b/globalstatic/css/styles.css
@@ -137,11 +137,17 @@ body {
 .my-fb-like, .my-fb-share {
 	vertical-align: top;
 	margin-left: 5px;
-	width: 22px;
-	height: 21px;
-}
-.my-fb-like {
-	background-image: url("../images/like-button.png");
 	background-size: contain;
 	background-repeat: no-repeat;
+}
+.my-fb-like {
+	width: 22px;
+	height: 21px;
+	background-image: url("../images/like-button.png");
+}
+
+.my-fb-share {
+	width: 40px;
+	height: 21px;
+	background-image: url("../images/fb_share.png");
 }
