--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,22 +8,11 @@
                 <img src="{% static "global/images/lbog_logo.png" %}" alt="LBOG logo" id='lbog_logo'>
             </div>
             <div class="span3 offset3" id="fb-buttons">
-                <a href="{% url 'fbtest' %}">Fb test</a>
+{#                 <a href="{% url 'fbtest' %}">Fb test</a> #}
                 <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();">
 </fb:login-button>
-                {% comment %}
-                    
-                <div
-                  class="fb-login-button"
-                  data-show-faces="true"
-                  data-width="200"
-                  data-max-rows="1"
-                  data-scope="publish_actions">
-                </div>
-                {% endcomment %}
                 <button class="my-fb-like" onclick="postLike('http://{{ SITE_ROOT }}{% url 'home' %}')"></button>
-                <button class="my-fb-share" onclick="postShare('http://{{ SITE_ROOT }}{% url 'home' %}')">Share</button>
-                {# <button class="btn btn-primary">FB Share</button> #}
+                <button class="my-fb-share" onclick="postShare('http://{{ SITE_ROOT }}{% url 'home' %}')"></button>
             </div>
             <div class="span3" id="reg-login">
                 {% if user.is_authenticated %}
