--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,14 +7,14 @@
             <div class="span3" id="logo">
                 <img src="{% static "global/images/lbog_logo.png" %}" alt="LBOG logo" id='lbog_logo'>
             </div>
-            <div class="span3 offset3" id="fb-buttons">
+            <div class="span3" id="fb-buttons">
 {#                 <a href="{% url 'fbtest' %}">Fb test</a> #}
                 <fb:login-button autologoutlink="true" onlogin="OnRequestPermission();">
-</fb:login-button>
+                </fb:login-button>
                 <button class="my-fb-like" onclick="postLike('http://{{ SITE_ROOT }}{% url 'home' %}')"></button>
                 <button class="my-fb-share" onclick="postShare('http://{{ SITE_ROOT }}{% url 'home' %}')"></button>
             </div>
-            <div class="span3" id="reg-login">
+            <div class="span3 offset2" id="reg-login">
                 {% if user.is_authenticated %}
                 Welcome, {{ user }}<br>
                 <a href="{% url "my-account" pk=user.id %}">My Account</a> / <a href="{% url "logout" %}">Logout</a> 
