search bar working

--- a/projects/templates/mobile/project_details.html
+++ b/projects/templates/mobile/project_details.html
@@ -5,7 +5,8 @@
 {% endblock extrahead_level2 %}
 
 {% block sidebar_content %}
-        
+   
+     
     <h4>Other Projects</h4>
     <br><b>Completed:</b><br>
     {% for c_project in completed_projects %}
@@ -27,7 +28,7 @@
 
 
 {% block main_content %}
-  <div class="span6 main-content">    
+  <div class="main-content">    
     <div class="search-wrapper">
          <table class="search-table">
            <tr class="search-top-wrapper" id="top-0">
