--- a/templates/mobile/i_want_to_help.html
+++ b/templates/mobile/i_want_to_help.html
@@ -10,7 +10,7 @@
 {% endblock sidebar_content %}
 
 {% block main_extra_content %}
-<div class="span6 main-content" id="tabs">
+<div class="main-content" id="tabs">
 	<ul class="nav nav-tabs">
      <li id="info-li"><a href="#info-div">What Can You Do To Help</a></li>
      <li id="search-li"><a href="#search-results">Search Results</a></li>
