templates looking better

--- a/projects/templates/help_offers_charity_content.html
+++ b/projects/templates/help_offers_charity_content.html
@@ -1,5 +1,5 @@
 {% if not help_offers %}
-  <p>No {{ status }} help_offers found</p>  
+  <p>No {{ status }} help offers found</p>  
 {% endif %}
 
 {% for help_offer in help_offers %}
