--- a/templates/mobile/base_accounts.html
+++ b/templates/mobile/base_accounts.html
@@ -14,7 +14,7 @@
 
 {% block main_content %}
 
-<div class="area span6 my-account-main">
+<div class="area main-content">
   {% block accounts_content %}
   {% endblock accounts_content %}
 </div>
