--- a/templates/mobile/base_head.html
+++ b/templates/mobile/base_head.html
@@ -20,5 +20,5 @@
 <script src="{% static "global/js/search_format.js" %}"></script>
 {# <link href="{% static "global/bootstrap/css/bootstrap-fileupload.min.css" %}"   rel="stylesheet" /> #}
 {# <script src="{% static "bootstrap-fileupload.min.js" %}"></script> #}
-<link href="{% static "global/assets/bootstrap/css/bootstrap-responsive.css" %}" rel="stylesheet">
+{# <link href="{% static "global/assets/bootstrap/css/bootstrap-responsive.css" %}" rel="stylesheet"> #}
 <!-- <link href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet"> -->
