--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -2,6 +2,8 @@
 
 {% block accounts_content %}
 
+<div class="main-content">
+    
 <form class="form-horizontal" action="" method="post">{% csrf_token %}
     <div>
         {% if form.errors %}
@@ -45,4 +47,5 @@
     </div>
 </form></div>
 
+</div>
 {% endblock accounts_content %}
